Fix bug where page was too long/short on mobile

--- a/code/style.css
+++ b/code/style.css
@@ -8,7 +8,6 @@ body {
   color: #eedcc6;
   display: flex;
   height: 100vh;
-  /*overflow: hidden; */
 }
 
 /*---SPLASH SCREEN---*/
@@ -56,7 +55,7 @@ body {
   transition: ease-in-out 0.5s;
 }
 
-/* - - - BLUE: MAIN - - - - - - - - */
+/* - - - MAIN - - - - - - - - */
 .weather-app {
   /* border: 1px solid rgb(59, 59, 255); */
   align-self: center;
@@ -64,42 +63,41 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: auto;
-  height: auto;
+  height: 100vh;
   justify-content: space-between;
   flex-direction: column;
   background-color: #928279; /*-apps color-*/
-  padding: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 0;
+  padding-bottom: 0;
   position: relative;
   box-shadow: 2px 36px 40px -9px rgba(131, 130, 130, 0.75);
   -webkit-box-shadow: 2px 36px 40px -9px rgba(131, 130, 130, 0.75);
   -moz-box-shadow: 2px 36px 40px -9px rgba(131, 130, 130, 0.75);
 }
 
-/* - - - PINK: HEADER WRAPPER - - - - - - - - */
+/* - - - HEADER WRAPPER - - - - - - - - */
 
 .header-wrapper {
-  /* border: 1px solid hotpink; */
   display: flex;
   justify-content: space-between;
-  padding-top: 10px;
+  padding-top: 20px;
 }
 
-/* - - - RED: TODAYS WEATHER - - - - - - - - */
+/* - - - TODAYS WEATHER - - - - - - - - */
 
 .todays-weather {
-  /* border: 1px solid red; */
   font-size: 18px;
 }
 
 .todays-weather-row {
-  /* border: 1px solid red; */
   padding-bottom: 7px;
 }
 
-/* - - - PURPLE: HAMBURGER MENU - - - - - - - - */
+/* - - - HAMBURGER MENU - - - - - - - - */
 
 .hamburger-menu {
-  /* border: 1px solid rgb(108, 0, 180); */
   display: flex;
 }
 
@@ -172,10 +170,9 @@ a:link {
 
 /* -----------TOP INFO --------------*/
 
-/* - - - YELLOW: COZY TEXT - - - - - - - - */
+/* - - - COZY TEXT - - - - - - - - */
 
 .cozy-text {
-  /* border: 1px solid rgb(199, 143, 14); */
   font-weight: 500;
 }
 
@@ -188,10 +185,9 @@ a:link {
   font-size: 50px;
 }
 
-/* - - - GREEN: WEATHER FORECAST - - - - - - - - */
+/* - - - WEATHER FORECAST - - - - - - - - */
 
 .weather-forecast {
-  /* border: 1px solid green; */
   margin-top: 10px;
   margin-bottom: 20px;
 }
@@ -230,7 +226,6 @@ a:link {
     max-width: 325px;
     height: 600px;
     border-radius: 10px;
-    padding-bottom: 10px;
   }
 
   .todays-weather {
@@ -259,13 +254,10 @@ a:link {
   }
 
   .weather-forecast {
-    margin-top: -28px;
     padding-top: 30px;
   }
 
   .weather-forecast-entry {
-    display: flex;
-    justify-content: space-between;
     line-height: 16px;
     font-size: 16px;
   }
